# bfsCeres

./: CMakeLists.txt  LICENSE.md  README  README.md
cmake/: BuildType.cmake  External_Ceres.cmake  External_Gflags.cmake  External_SuiteSparse.cmake  External_eigen.cmake  External_glog.cmake  External_metis.cmake  External_sscmake.cmake  projects.cmake  setDownloadDir.cmake
